shopping cart changes

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <link href="assets/client/css/style.default.css" rel="stylesheet">
   <!-- <link href="assets/client/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMerriweather:400,400italic" rel="stylesheet" type="text/css"><!-- Font Awesome css-->
-  <!-- <link rel="stylesheet" href="assets/client/vendor/font-awesome/css/font-awesome.min.css">   -->
+  <link rel="stylesheet" href="assets/client/vendor/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/client/vendor/owl.carousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/client/vendor/owl.carousel/assets/owl.theme.default.min.css"><!-- Theme stylesheet-->
 
