--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,25 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
  <!-- Google Fonts -->
- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" type="text/css">
 
- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet" type="text/css">
 
 
   <!-- Template Main CSS File -->
-  <link href="assets/LandingPage/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/LandingPage/vendor/icofont/icofont.min.css" rel="stylesheet" type="text/css">
   <!-- <link href="assets/LandingPage/css/style.css" rel="stylesheet">
 
   <link href="assets/css/cart.css" rel="stylesheet"> -->
 
 
-  <link href="assets/client/css/style.default.css" rel="stylesheet">
-  <link href="assets/client/css/CommonClient.css" rel="stylesheet">
+  <link href="assets/client/css/style.default.css" rel="stylesheet" type="text/css">
+  <link href="assets/client/css/CommonClient.css" rel="stylesheet" type="text/css">
   <!-- <link href="assets/client/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMerriweather:400,400italic" rel="stylesheet" type="text/css"><!-- Font Awesome css-->
-  <link rel="stylesheet" href="assets/client/vendor/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/client/vendor/owl.carousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="assets/client/vendor/owl.carousel/assets/owl.theme.default.min.css"><!-- Theme stylesheet-->
+  <link rel="stylesheet" href="assets/client/vendor/font-awesome/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="assets/client/vendor/owl.carousel/assets/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="assets/client/vendor/owl.carousel/assets/owl.theme.default.min.css" type="text/css"><!-- Theme stylesheet-->
 
   <script src="assets/client/js/jquery-jquery.min.js"></script>
   <script src="assets/client/js/umd-popper.min.js"></script>
