--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
   <script src="assets/client/js/owl.carousel-owl.carousel.min.js"></script><!-- main script-->
   <script src="assets/client/js/js-front.js"></script>
 
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDfdBj6szrfhvikKoLJ13hFToXt7nxHiXw"></script>
 
 </head>
 <body>
